--- a/wiki/it/Macro_EasyReflector.html
+++ b/wiki/it/Macro_EasyReflector.html
@@ -87,12 +87,10 @@ Macro EasyReflector
 </div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EasyReflector_screenshot01.png&amp;filetimestamp=20230904193711&amp;.html" class="mw-file-description"><img src="../File/EasyReflector_screenshot01.png" decoding="async" width="600" height="282" class="mw-file-element" data-file-width="600" data-file-height="282"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro EasyReflector screenshot&lrm;</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Legend">Legend</span></h2>
-</div>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Schermata della macro EasyReflector&lrm;</p>
+<p><span id="Legend"></span>
+</p>
+<h2><span class="mw-headline" id="Legenda">Legenda</span></h2>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b50/raw/71b325b7c1568e2460beb099f553225a5516fc44/EasyReflector.FCMacro">Macro</a></i>
 </p>
@@ -147,15 +145,15 @@ webbrowser.open("https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b
 
 <!-- 
 NewPP limit report
-Cached time: 20260123164722
+Cached time: 20260123164759
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.057 seconds
-Preprocessor visited node count: 126/1000000
-Post&#8208;expand include size: 3993/2097152 bytes
-Template argument size: 1330/2097152 bytes
+CPU time usage: 0.039 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 125/1000000
+Post&#8208;expand include size: 4003/2097152 bytes
+Template argument size: 1335/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -163,14 +161,14 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.324      1 -total
- 33.94%    3.844      1 Template:Macro
- 24.93%    2.823      1 Template:Codeextralink
- 19.20%    2.174      1 Template:Caption
- 19.08%    2.160      1 Template:CodeDownload
+100.00%   16.886      1 -total
+ 28.72%    4.849      1 Template:Codeextralink
+ 25.72%    4.343      1 Template:Macro
+ 21.48%    3.627      1 Template:CodeDownload
+ 20.89%    3.528      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164722 and revision id 1743022. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164759 and revision id 1743026. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
