--- a/wiki/it/Macro_EasyReflector.html
+++ b/wiki/it/Macro_EasyReflector.html
@@ -123,16 +123,10 @@ webbrowser.open("https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b
 </div>
 <div style="display:none;">&lt;class="rawcodeurl"&gt;&lt;a href="<a rel="nofollow" class="external free" href="https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b50/raw/71b325b7c1568e2460beb099f553225a5516fc44/EasyReflector.FCMacro">https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b50/raw/71b325b7c1568e2460beb099f553225a5516fc44/EasyReflector.FCMacro</a>"&gt;raw code&lt;/a&gt;</div>
 <p><br>
+Icona barra degli strumenti
+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EasyReflectorIcon.svg&amp;filetimestamp=20230904192647&amp;.html" class="mw-file-description"><img src="../File/EasyReflectorIcon.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EasyReflectorIcon.svg&amp;filetimestamp=20230904192647&amp;.html" class="mw-file-description"><img src="../File/EasyReflectorIcon.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-</div> 
 <p><b>Macro EasyReflector.FCMacro</b>
 </p>
 <div class="plainlinks" style="width:300px; text-align:center; margin:10px auto;">
@@ -145,13 +139,13 @@ webbrowser.open("https://gist.github.com/mwganson/aea3c51981c0b994cfd961cf4db56b
 
 <!-- 
 NewPP limit report
-Cached time: 20260123164759
+Cached time: 20260123164808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 125/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.045 seconds
+Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 4003/2097152 bytes
 Template argument size: 1335/2097152 bytes
 Highest expansion depth: 5/100
@@ -161,14 +155,14 @@ Unstrip post&#8208;expand size: 2143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.886      1 -total
- 28.72%    4.849      1 Template:Codeextralink
- 25.72%    4.343      1 Template:Macro
- 21.48%    3.627      1 Template:CodeDownload
- 20.89%    3.528      1 Template:Caption
+100.00%    7.065      1 -total
+ 33.49%    2.366      1 Template:Macro
+ 22.46%    1.587      1 Template:Codeextralink
+ 22.08%    1.560      1 Template:Caption
+ 18.10%    1.279      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164759 and revision id 1743026. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164808 and revision id 1743030. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
