--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -7,6 +7,7 @@
 <li><a href="../pl/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Widok drzewa (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Vista em &aacute;rvore (2% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../sv/Tree_View.html" class="mw-pt-progress mw-pt-progress--low" title="Tree View/sv (2% translated)" lang="sv" dir="ltr">svenska</a></li>
+<li><a href="../cs/Tree_View.html" class="mw-pt-progress mw-pt-progress--complete" title="Stromov&eacute; zobrazen&iacute; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#1044;&#1088;&#1077;&#1074;&#1086; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072; (94% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Tree_View.html" class="mw-pt-progress mw-pt-progress--high" title="&#12484;&#12522;&#12540;&#12499;&#12517;&#12540; (94% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -172,35 +173,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121060001
+Cached time: 20260123164828
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.156 seconds
-Real time usage: 0.273 seconds
+CPU time usage: 0.171 seconds
+Real time usage: 0.748 seconds
 Preprocessor visited node count: 760/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2223/5000000 bytes
+Unstrip post&#8208;expand size: 2385/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.923      1 -total
- 25.09%   16.291      1 Template:Std_Base_navi/bg
- 21.23%   13.784      1 Template:Interface_navi/bg
- 18.31%   11.886      3 Template:Navigation_menu_2
- 13.87%    9.006      2 Template:PropertyData
-  9.39%    6.096      1 Template:Userdocnavi/bg
-  6.00%    3.893      3 Template:Variable
-  5.98%    3.881      1 Template:PropertyView
-  4.65%    3.020      5 Template:Version
-  3.85%    2.498      1 Template:FALSE
+100.00%  216.567      1 -total
+ 21.80%   47.204      1 Template:Std_Base_navi/bg
+ 16.90%   36.594      1 Template:Interface_navi/bg
+ 16.42%   35.565      2 Template:PropertyData
+ 14.04%   30.400      1 Template:FALSE
+ 14.01%   30.335      3 Template:Variable
+ 11.14%   24.125      3 Template:Navigation_menu_2
+  8.91%   19.287      1 Template:Userdocnavi/bg
+  4.59%    9.951      1 Template:PropertyView
+  3.19%    6.899     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121060000 and revision id 1741787. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260123164828 and revision id 1741787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
