--- a/wiki/it/Macro_EasyReflector.html
+++ b/wiki/it/Macro_EasyReflector.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Einfacher Reflektor (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_EasyReflector.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro EasyReflector (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro EasyReflector (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_EasyReflector.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: &#321;atwy Reflektor (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -77,10 +77,8 @@ Macro EasyReflector
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>EasyReflector makes it easy to manage textures in FreeCAD. It creates a <a href="../App_FeaturePython.html" title="App FeaturePython">Feature Python</a> object that persists when the document is reloaded. Select from a variety of included textures, or use your own images.
+<p>EasyReflector semplifica la gestione delle texture in FreeCAD. Crea un oggetto <a href="../it/App_FeaturePython.html" title="App FeaturePython/it">Feature Python</a> che persiste quando il documento viene ricaricato. Si pu&ograve; scegliere tra una variet&agrave; di texture incluse o utilizzare le proprie immagini.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Full documentation can be found on github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/EasyReflector">EasyReflector</a>.
 </p>
@@ -139,30 +137,30 @@ Icona barra degli strumenti
 
 <!-- 
 NewPP limit report
-Cached time: 20260123164808
+Cached time: 20260123164842
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.045 seconds
-Preprocessor visited node count: 123/1000000
+CPU time usage: 0.043 seconds
+Real time usage: 0.071 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 4003/2097152 bytes
 Template argument size: 1335/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2143/5000000 bytes
+Unstrip post&#8208;expand size: 2144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.065      1 -total
- 33.49%    2.366      1 Template:Macro
- 22.46%    1.587      1 Template:Codeextralink
- 22.08%    1.560      1 Template:Caption
- 18.10%    1.279      1 Template:CodeDownload
+100.00%   16.230      1 -total
+ 31.42%    5.099      1 Template:Codeextralink
+ 27.23%    4.419      1 Template:Caption
+ 19.49%    3.163      1 Template:Macro
+ 17.19%    2.790      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164808 and revision id 1743030. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164842 and revision id 1743032. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
