--- a/wiki/it/Macro_EasyReflector.html
+++ b/wiki/it/Macro_EasyReflector.html
@@ -78,12 +78,8 @@ Macro EasyReflector
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>EasyReflector semplifica la gestione delle texture in FreeCAD. Crea un oggetto <a href="../it/App_FeaturePython.html" title="App FeaturePython/it">Feature Python</a> che persiste quando il documento viene ricaricato. Si pu&ograve; scegliere tra una variet&agrave; di texture incluse o utilizzare le proprie immagini.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Full documentation can be found on github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/EasyReflector">EasyReflector</a>.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EasyReflector_screenshot01.png&amp;filetimestamp=20230904193711&amp;.html" class="mw-file-description"><img src="../File/EasyReflector_screenshot01.png" decoding="async" width="600" height="282" class="mw-file-element" data-file-width="600" data-file-height="282"></a></span>
+</p><p>La documentazione completa &egrave; disponibile su github: <a rel="nofollow" class="external text" href="https://github.com/mwganson/EasyReflector">EasyReflector</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=EasyReflector_screenshot01.png&amp;filetimestamp=20230904193711&amp;.html" class="mw-file-description"><img src="../File/EasyReflector_screenshot01.png" decoding="async" width="600" height="282" class="mw-file-element" data-file-width="600" data-file-height="282"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Schermata della macro EasyReflector&lrm;</p>
 <p><span id="Legend"></span>
@@ -137,13 +133,13 @@ Icona barra degli strumenti
 
 <!-- 
 NewPP limit report
-Cached time: 20260123164842
+Cached time: 20260123164853
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.071 seconds
-Preprocessor visited node count: 122/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.094 seconds
+Preprocessor visited node count: 121/1000000
 Post&#8208;expand include size: 4003/2097152 bytes
 Template argument size: 1335/2097152 bytes
 Highest expansion depth: 5/100
@@ -153,14 +149,14 @@ Unstrip post&#8208;expand size: 2144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.230      1 -total
- 31.42%    5.099      1 Template:Codeextralink
- 27.23%    4.419      1 Template:Caption
- 19.49%    3.163      1 Template:Macro
- 17.19%    2.790      1 Template:CodeDownload
+100.00%   19.698      1 -total
+ 43.63%    8.595      1 Template:Codeextralink
+ 35.51%    6.995      1 Template:Macro
+ 12.28%    2.418      1 Template:CodeDownload
+  7.34%    1.445      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164842 and revision id 1743032. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412474-0!canonical and timestamp 20260123164853 and revision id 1743034. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
