--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Connect And Sweep/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Connect+And+Sweep&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Connect And Sweep/de (28% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Verbinden und Austragen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Connect_And_Sweep.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Connect And Sweep (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Connect_And_Sweep.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Connect And Sweep (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
@@ -73,11 +73,11 @@ Collega con Sweep
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
 <p>Questa macro crea una connessione tra due oggetti, un oggetto e un punto o tra due punti. La connessione va da un centro all'altro centro degli oggetti, la sua forma &egrave; configurabile, e pu&ograve; essere circolare, poligonale o ellittica. E disponibile una funzione di discretizzazione per creare punto di riferimento configurabili per tagliare linee in sezione o tagliare con una dimensione.<br>&Egrave; disponibile una funzione di discretizzazione per creare punti marker configurabili per il taglio di linee in sezione o il taglio con una quota sul punto viene creato per tutte le coordinate.<br>Una funzione di faccia o filo duplicata da utilizzare con l'operazione Sweep e Loft.<br>Operazione Sweep e Loft direttamente con la macro.
 </p>
 </div>
@@ -284,32 +284,32 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009170324
+Cached time: 20260123165040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.199 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.256 seconds
 Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 9705/5000000 bytes
+Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.036      1 -total
-  7.16%    4.224      1 Template:Macro/it
-  4.01%    2.365     13 Template:Caption
-  3.39%    2.004      1 Template:ColoredText
-  2.82%    1.665      6 Template:Clear
-  2.55%    1.507      1 Template:KEY
-  2.27%    1.340      1 Template:Codeextralink
+100.00%   87.367      1 -total
+ 15.50%   13.545      1 Template:Macro/it
+  6.72%    5.867      1 Template:ColoredText
+  4.87%    4.259      1 Template:Codeextralink
+  4.49%    3.923     13 Template:Caption
+  3.03%    2.648      6 Template:Clear
+  2.35%    2.057      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20251009170324 and revision id 1659168. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165040 and revision id 1743038. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
