--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -76,11 +76,8 @@ Collega con Sweep
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Descrizione_2">Descrizione</span></h2>
-<p>Questa macro crea una connessione tra due oggetti, un oggetto e un punto o tra due punti. La connessione va da un centro all'altro centro degli oggetti, la sua forma &egrave; configurabile, e pu&ograve; essere circolare, poligonale o ellittica. E disponibile una funzione di discretizzazione per creare punto di riferimento configurabili per tagliare linee in sezione o tagliare con una dimensione.<br>&Egrave; disponibile una funzione di discretizzazione per creare punti marker configurabili per il taglio di linee in sezione o il taglio con una quota sul punto viene creato per tutte le coordinate.<br>Una funzione di faccia o filo duplicata da utilizzare con l'operazione Sweep e Loft.<br>Operazione Sweep e Loft direttamente con la macro.
+<p>Questa macro crea una connessione tra due oggetti, un oggetto e un punto o tra due punti. La connessione va da un centro all'altro centro degli oggetti, la sua forma &egrave; configurabile, e pu&ograve; essere circolare, poligonale o ellittica. E disponibile una funzione di discretizzazione per creare punti di riferimento configurabili per tagliare linee in sezione o tagliare con una dimensione.<br>&Egrave; disponibile una funzione di discretizzazione per creare punti marker configurabili per il taglio di linee in sezione o il taglio con una quota sul punto viene creato per tutte le coordinate.<br>Una feature di faccia o filo duplicata da utilizzare con l'operazione Sweep e Loft.<br>Operazione Sweep e Loft direttamente con la macro.
 </p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/3ec67a3711202dab69592ce53b938924/raw/984cd58c1d64dd391062025cfa82a698c7268e66/Macro_Connect_And_Sweep.FCMacro">Macro</a></i>
 </p>
@@ -116,9 +113,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/3ec67a3711202dab695
 <span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep_00.png&amp;filetimestamp=20160607100938&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep_00.png" decoding="async" width="640" height="480" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro_Connect_And_Sweep</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Usage">Usage</span></h2>
-</div>
+<p><span id="Usage"></span>
+</p>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Eseguire la macro, selezionare gli oggetti o i punti, scegliere la forma e impostare i parametri, poi fare clic su <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Create</span>.
@@ -284,13 +281,13 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165040
+Cached time: 20260123165204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.256 seconds
-Preprocessor visited node count: 390/1000000
+CPU time usage: 0.157 seconds
+Real time usage: 0.670 seconds
+Preprocessor visited node count: 386/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 6/100
@@ -300,16 +297,16 @@ Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   87.367      1 -total
- 15.50%   13.545      1 Template:Macro/it
-  6.72%    5.867      1 Template:ColoredText
-  4.87%    4.259      1 Template:Codeextralink
-  4.49%    3.923     13 Template:Caption
-  3.03%    2.648      6 Template:Clear
-  2.35%    2.057      1 Template:KEY
+100.00%  209.687      1 -total
+  4.90%   10.266      1 Template:Macro/it
+  3.79%    7.943      6 Template:Clear
+  2.59%    5.425     13 Template:Caption
+  2.23%    4.667      1 Template:KEY
+  1.96%    4.109      1 Template:ColoredText
+  1.96%    4.105      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165040 and revision id 1743038. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165204 and revision id 1743042. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
