--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -281,12 +281,12 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165204
+Cached time: 20260123165203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.670 seconds
+CPU time usage: 0.136 seconds
+Real time usage: 0.329 seconds
 Preprocessor visited node count: 386/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
@@ -297,16 +297,16 @@ Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  209.687      1 -total
-  4.90%   10.266      1 Template:Macro/it
-  3.79%    7.943      6 Template:Clear
-  2.59%    5.425     13 Template:Caption
-  2.23%    4.667      1 Template:KEY
-  1.96%    4.109      1 Template:ColoredText
-  1.96%    4.105      1 Template:Codeextralink
+100.00%  108.798      1 -total
+  8.81%    9.583      1 Template:Macro/it
+  4.12%    4.486      1 Template:ColoredText
+  3.44%    3.742     13 Template:Caption
+  2.60%    2.824      1 Template:KEY
+  2.48%    2.696      6 Template:Clear
+  2.16%    2.350      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165204 and revision id 1743042. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165203 and revision id 1743042. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
