--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -116,12 +116,8 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/3ec67a3711202dab695
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Eseguire la macro, selezionare gli oggetti o i punti, scegliere la forma e impostare i parametri, poi fare clic su <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Create</span>.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep_01.png&amp;filetimestamp=20200705155702&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep_01.png" decoding="async" width="350" height="299" class="mw-file-element" data-file-width="752" data-file-height="642"></a></span>
+</p><p><span typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep_01.png&amp;filetimestamp=20200705155702&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep_01.png" decoding="async" width="350" height="299" class="mw-file-element" data-file-width="752" data-file-height="642"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Macro_Connect_And_Sweep</p>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep_Discretize.png&amp;filetimestamp=20200106123221&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep_Discretize.png" decoding="async" width="295" height="110" class="mw-file-element" data-file-width="295" data-file-height="110"></a></span>
@@ -281,13 +277,13 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165203
+Cached time: 20260123165214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.329 seconds
-Preprocessor visited node count: 386/1000000
+CPU time usage: 0.153 seconds
+Real time usage: 0.657 seconds
+Preprocessor visited node count: 382/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
 Highest expansion depth: 6/100
@@ -297,16 +293,16 @@ Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  108.798      1 -total
-  8.81%    9.583      1 Template:Macro/it
-  4.12%    4.486      1 Template:ColoredText
-  3.44%    3.742     13 Template:Caption
-  2.60%    2.824      1 Template:KEY
-  2.48%    2.696      6 Template:Clear
-  2.16%    2.350      1 Template:Codeextralink
+100.00%  236.594      1 -total
+  9.36%   22.142      1 Template:Macro/it
+  4.76%   11.271     13 Template:Caption
+  4.26%   10.086      6 Template:Clear
+  3.63%    8.582      1 Template:Codeextralink
+  3.45%    8.153      1 Template:ColoredText
+  1.97%    4.654      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165203 and revision id 1743042. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165213 and revision id 1743044. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
