--- a/wiki/it/Macro_Connect_And_Sweep.html
+++ b/wiki/it/Macro_Connect_And_Sweep.html
@@ -135,9 +135,9 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/3ec67a3711202dab695
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Connect_And_Sweep_Reset.png&amp;filetimestamp=20200106123737&amp;.html" class="mw-file-description"><img src="../File/Macro_Connect_And_Sweep_Reset.png" decoding="async" width="50" height="23" class="mw-file-element" data-file-width="50" data-file-height="23"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Reset</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Images">Images</span></h2>
-</div>
+<p><span id="Images"></span>
+</p>
+<h2><span class="mw-headline" id="Immagini">Immagini</span></h2>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Icone">Icone</span></h2>
 <p>Questi file devono essere copiati nella directory delle macro
@@ -277,12 +277,12 @@ Rileva errore nella selezione del modo scelto, se viene creato un errore di sele
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123165214
+Cached time: 20260123165223
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.153 seconds
-Real time usage: 0.657 seconds
+CPU time usage: 0.131 seconds
+Real time usage: 0.644 seconds
 Preprocessor visited node count: 382/1000000
 Post&#8208;expand include size: 13506/2097152 bytes
 Template argument size: 3072/2097152 bytes
@@ -293,16 +293,16 @@ Unstrip post&#8208;expand size: 9714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  236.594      1 -total
-  9.36%   22.142      1 Template:Macro/it
-  4.76%   11.271     13 Template:Caption
-  4.26%   10.086      6 Template:Clear
-  3.63%    8.582      1 Template:Codeextralink
-  3.45%    8.153      1 Template:ColoredText
-  1.97%    4.654      1 Template:KEY
+100.00%  276.961      1 -total
+  9.34%   25.864      1 Template:Macro/it
+  5.09%   14.093      6 Template:Clear
+  3.29%    9.125      1 Template:ColoredText
+  2.89%    7.996      1 Template:KEY
+  2.77%    7.669      1 Template:Codeextralink
+  1.92%    5.313     13 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165213 and revision id 1743044. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69548-0!canonical and timestamp 20260123165222 and revision id 1743046. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
